# ViroConstrictor

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  README.md  build_local_containers.py  conftest.py  env.yml  mamba-env.yaml  mkdocs.yml  pyproject.toml  ref.fasta  release-please-config.json  setup.py  versions.json
.github/: copilot-instructions.md
.github/agents/: DocstringUpdater.agent.md  UnitTestBuilder.agent.md
.github/workflows/: build_and_test.yml  publish_containers.yaml  release.yml  run_unittests.yml  sync.yml
0.2.1/: 404.html  index.html
0.2.1/installation/: index.html
0.2.1/search/: search_index.json
0.2.1/user-guide/: index.html
0.2.3/: 404.html
0.2.3/changelog/: index.html
0.2.3/search/: search_index.json
0.2.3/user-guide/: index.html
0.3.0/: index.html
0.3.0/changelog/: index.html
0.3.0/installation/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html
0.4.0/changelog/: index.html
0.4.0/installation/: index.html
0.4.0/search/: search_index.json
0.4.0/user-guide/: index.html
0.4.1/: 404.html  index.html
0.4.1/changelog/: index.html
0.4.1/installation/: index.html
0.4.1/search/: search_index.json
0.4.1/user-guide/: index.html
0.4.2/: 404.html  index.html  samples.xlsx
0.4.2/changelog/: index.html
0.4.2/global-config/: index.html
0.4.2/installation/: index.html
0.4.2/primers/: index.html
0.4.2/search/: search_index.json
0.4.2/user-guide/: index.html
1.0.0/amplicons/: index.html
1.0.0/changelog/: index.html
1.0.0/installation/: index.html
1.0.0/manual/: index.html
1.0.0/search/: search_index.json
1.0.1/: 404.html  index.html
1.0.1/amplicons/: index.html
1.0.1/changelog/: index.html
1.0.1/global-config/: index.html
1.0.1/installation/: index.html
1.0.1/manual/: index.html
1.0.1/primers/: index.html
1.0.1/search/: search_index.json
1.0.1/user-guide/: index.html
1.0.3/: 404.html  index.html
1.0.3/amplicons/: index.html
1.0.3/changelog/: index.html
1.0.3/global-config/: index.html
1.0.3/installation/: index.html
1.0.3/manual/: index.html
1.0.3/primers/: index.html
1.0.3/search/: search_index.json
1.0.3/user-guide/: index.html
1.0.4/: 404.html  index.html
1.0.4/amplicons/: index.html
1.0.4/changelog/: index.html
1.0.4/global-config/: index.html
1.0.4/installation/: index.html
1.0.4/manual/: index.html
1.0.4/primers/: index.html
1.0.4/search/: search_index.json
1.0.4/user-guide/: index.html
1.1.0/: 404.html  index.html
1.1.0/amplicons/: index.html
1.1.0/changelog/: index.html
1.1.0/global-config/: index.html
1.1.0/input-formatting/: index.html
1.2.0/: index.html
1.2.1/: 404.html
1.2.2/: 404.html  index.html
1.2.3/: 404.html  index.html
1.2.4/: 404.html  index.html
1.2.5/: 404.html  index.html
1.2.6/: 404.html  index.html
1.3.0/: 404.html  index.html
1.3.1/: 404.html  index.html
1.4.0/: 404.html  index.html
1.4.5/: index.html
1.4.6/: 404.html
1.5.0/: 404.html  index.html
1.5.1/: 404.html  index.html
1.5.2/: 404.html  index.html
1.5.4/: 404.html  index.html
1.5.5/: 404.html  index.html
1.6.2/: 404.html  index.html
1.6.3/: 404.html
1.6.4/: index.html
1.6.5/: 404.html  index.html
1.6.6/: 404.html  index.html
VAmp/: VAmp.py  functions.py  runconfigs.py  userprofile.py
ViroConstrictor/: ViroConstrictor.py  __init__.py  __main__.py  check_scheduler.py  functions.py  genbank.py  logging.py  match_ref.py  parser.py  runconfigs.py  runreport.py  samplesheet.py  scheduler.py  update.py  userprofile.py  validatefasta.py  workflow_config.py  workflow_executor.py
container_manager/: Dockerfile.j2  README.md  __main__.py  config_dockerfiles.yaml  docker_template_specific.j2
containers/: Alignment.dockerfile  Clean.dockerfile  Consensus.dockerfile  Dockerfile.j2  ORF_analysis.dockerfile  README.md  Scripts.dockerfile  add_OCI_to_docker_engine.py  build_containers.py  builtcontainers.json  convert_artifact_containers_for_apptainer.py  core_scripts.dockerfile  dockerfiles.yaml  generate_dockerfiles.py  mr_scripts.dockerfile  pull_published_containers.py  tag_and_push_containers.py
docs/: amplicons.md  architecture.md  changelog.md  configuration.md  dependencies.md  flags.md  global-config.md  index.md  input-formatting.md  installation.md  manual.md  multi-reference-analysis.md  multi-reference.md  multi-target-analysis.md  presets.md  primers.md  quickstart.md  samples.xlsx  single-target-analysis.md  user-guide.md  workflow-visualization-guide.md
snakemake_logger_plugin_viroconstrictor/: __init__.py  handler.py
(+450 files in other folders)
