[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ViroConstrictor"
dynamic = ["version"]
description = "Analysis of (targeted) Viral NGS data"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0"
authors = [
    { name = "Florian Zwagemaker" },
    { name = "Karim Hajji" },
    { name = "Gino Raaijmakers" },
    { name = "Dennis Schmitz" },
    { name = "Margo Raijmakers" },
    { name = "Annelies Kroneman" },
    { email = "ids-bioinformatics@rivm.nl" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "urllib3==2.5.0",
    "biopython==1.85.*",
    "drmaa==0.7.9",
    "fpdf2==2.8.4",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "pyyaml==6.0.3",
    "rich==13.9.4",
    "AminoExtract==0.4.1",
    "biovalid==0.3.0",
]

[project.scripts]
ViroConstrictor = "ViroConstrictor.__main__:main"
viroconstrictor = "ViroConstrictor.__main__:main"
viroConstrictor = "ViroConstrictor.__main__:main"
Viroconstrictor = "ViroConstrictor.__main__:main"

[project.urls]
homepage = "https://rivm-bioinformatics.github.io/ViroConstrictor/"
source-code = "https://github.com/RIVM-bioinformatics/ViroConstrictor"

[tool.hatch.version]
path = "ViroConstrictor/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/ViroConstrictor",
    "/snakemake_logger_plugin_viroconstrictor",
]

[tool.hatch.build.targets.wheel]
packages = [
    "ViroConstrictor",
    "snakemake_logger_plugin_viroconstrictor",
]

[tool.hatch.build.targets.wheel.shared-data]
"ViroConstrictor/workflow" = "ViroConstrictor/workflow"
"snakemake_logger_plugin_viroconstrictor" = "snakemake_logger_plugin_viroconstrictor"

[tool.black]
line-length = 150
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 150
py_version = 310
float_to_top = true

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
  "^tests/e2e/",
]

[tool.pylint.main]
py-version = "3.10"
jobs = 0
ignore-paths = [
  "^tests/e2e/.*$",
]

[tool.pylint.format]
max-line-length = 150
